A5P1: - Fixed Contrast - Fixed location of link endings for the audio files.

--- a/Assignment 5/Part 1/style.css
+++ b/Assignment 5/Part 1/style.css
@@ -308,3 +308,8 @@ audio {
 .show-transcript-button button:active {
 	background-color: #ccc;
 }
+
+caption {
+	color: white;
+	text-shadow: 1px 1px 0px black;
+}
